ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-management-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: customer-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-frontend
                port:
                  number: 80
